--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,5 +2,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(52, 53, 65);
-    color: #FFFFFF;
+    color: #b4b4b4;
+}
+
+a {
+    color: #66b0a7;
 }
