--- a/assets/custom.css
+++ b/assets/custom.css
@@ -8,3 +8,153 @@ body {
 a {
     color: #66b0a7;
 }
+
+h3 {
+    margin-bottom: 0;
+    margin-top: 5px;
+    font-size: 10px;
+    color: #ece4e4;
+}
+
+.custom-header {
+    background-color: #2d2b34;
+    padding-top: 6px;
+    padding-bottom: 4px;
+    border-bottom: 1px solid  rgba(54, 55, 67, 0.807);
+}
+
+.custom-title-class {
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 1px;
+    font-size: 13px;
+    color: rgb(251, 245, 245);
+    text-align: left;
+    margin-left: 20px;
+}
+
+.custom-latest-commits {
+    font-family: Arial, sans-serif;
+    margin-left: 20px;
+    margin-top: 10px;
+    font-size: 12px;
+    color: #ffffff;
+    display: inline-block;
+    border: 1px solid;
+    background-color: rgba(54, 55, 67, 0.807);
+    border-color: #2b3434;
+    border-radius: 12px;
+    padding: 20px;
+    padding-top: 4px;
+    z-index: 999;
+    position: absolute;
+    top: 25px;
+}
+
+.custom-gravatar {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-top: 10px;
+    margin-bottom: -4px;
+    border: 1px solid white;
+}
+
+.plot-div {
+    background-color: rgb(47, 48, 59);
+    border-bottom: 1px solid #ece4e4;
+    background: linear-gradient(to left, rgb(47, 48, 59), rgb(37, 43, 49));
+    padding-bottom: 20px;
+}
+
+.button-div {
+    position: absolute;
+    top: 549px;
+    left: 60px;
+    z-index: 999;
+}
+
+.btn {
+    width: 150px;
+    margin-left: 10px;
+    padding: 4px 15px;
+    border: none;
+    border-radius: 6px;
+    font-size: 10px;
+    cursor: pointer;
+    transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+    border: 1px solid #b4b4b4;
+    background-color: rgba(52, 53, 65, 0);
+    color: #b4b4b4;
+}
+
+.btn:hover {
+    background-color: rgb(41, 42, 55);
+    color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.custom-total-commits {
+    font-family: Arial, sans-serif;
+    font-size: 12px;
+    color: #b4b4b4;
+    position: absolute;
+    right: 3%;
+    top: 1%;
+    
+}
+
+.last-run {
+    font-size: 8px;
+    margin-left: 20px;
+}
+
+.custom-fun-stats-container {
+    padding-left: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-x: auto;
+    position: sticky;
+
+.custom-fun-stats-card {
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    color: #ffffffb1;
+    background-color: #2c3e50;
+    border: 1px solid #8abced18;
+    border-radius: 5px;
+    padding: 11px;
+    margin-right: 10px;
+    margin-bottom: 11px;
+    margin-top: 11px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    text-align: center;
+    transition: box-shadow 0.8s ease-in, background-color 0.70s ease-in
+}
+
+.custom-fun-stats-card:hover {
+    box-shadow: 0 0 7px 4px rgba(184, 202, 19, 0.8);
+    background-color: #1e2e3e;
+    transition: box-shadow 0.1s ease-out, background-color 0.50s ease-out
+}
+
+.custom-fun-stats-title {
+    color: #f8f8fa;
+    font-size: 15px;
+    font-weight: bold;
+    text-shadow: 0 0 3px rgba(88, 197, 251, 0.412);
+    margin-bottom: -9px;
+}
+
+.custom-fun-stats-text {
+    margin-bottom: -2px;
+    font-size: 10px;
+}
+
+.custom-fun-stats-text-highlight {
+    margin-bottom: 0px;
+    font-weight: bold;
+    font-size: 10px;
+    color: #ffffff;
+}
